app/src/ui/components/MemoListFilter/MemoListFilter.css
.memo-list-filter {
    @apply overscroll-none flex flex-col;

    .date-picker {
        @apply px-2 w-full;

        .date-picker-header {
            @apply flex items-center justify-between mb-1;

            .btn {
                @apply px-0.5 md:px-1!;
            }
        }

        .date-picker-dropdowns {
            @apply flex gap-2;

            select {
                @apply hover:bg-surface-level-1 hover:shadow-sm cursor-pointer p-0.5;
            }
        }

        .calendar-grid {
            @apply w-full text-center;
        }

        .calendar-grid-header .calendar-grid-cell {
            @apply text-center p-0 font-semibold text-sm text-subtle-extra-dark pointer-events-none;
        }

        .calendar-grid-body .calendar-grid-cell {
            @apply flex items-center justify-center text-base p-0 w-full h-full;

            span {
                @apply size-10 rounded-full flex items-center justify-center cursor-pointer;
            }

            &[data-outside-month] {
                @apply text-subtle;
            }

            &.today span {
                @apply text-primary-dark dark:text-primary-light;
            }

            &[data-selected] {
                &:hover span,
                span {
                    @apply text-primary-extra-dark bg-primary-extra-light border border-primary rounded-full;
                }
            }

            &:hover span {
                @apply bg-subtle-extra-light;
            }

            &[data-disabled] {
                span {
                    @apply text-subtle cursor-default;
                }
                &:hover span {
                    @apply bg-transparent text-subtle;
                }
            }
        }
    }

    .short-day-picker {
        @apply w-full flex;

        @media (max-width: 1024px) {
            @apply pt-1;
        }

        .calendar-grid {
            @apply w-full flex flex-col;
        }

        .calendar-grid-header {
            @apply w-full flex pointer-events-none;

            tr {
                @apply w-full grid grid-cols-7;
            }

            th {
                @apply font-light;
            }
        }

        .calendar-grid-body {
            @apply w-full flex flex-row flex-nowrap justify-start items-center w-full overflow-x-auto overscroll-none;
            scroll-snap-type: x mandatory;

            tr {
                @apply grid grid-cols-7;
                flex-basis: 100%;
                flex-shrink: 0;
                scroll-snap-align: center;
            }

            .calendar-grid-cell {
                @apply border border-subtle-extra-light rounded-full;
            }
        }

        .calendar-grid-cell {
            @apply flex items-center justify-center py-2 text-sm cursor-pointer size-10 p-0;

            &[data-outside-month] {
                @apply text-subtle bg-subtle-extra-light/20 border-subtle-extra-light/20;
            }

            &[data-disabled] {
                @apply text-subtle-extra-light cursor-default bg-subtle-extra-light/10 border-subtle-extra-light/10;
            }

            &.today {
                @apply text-primary-dark dark:text-primary-light font-semibold;
            }

            &[data-selected] {
                @apply text-primary-extra-dark bg-primary-extra-light border border-primary-extra-dark;
            }
        }
    }

    .collapsibile-date-picker {
        @apply flex flex-col mb-3 tablet:hidden;

        & > .btn {
            min-height: auto !important;

            &:active {
                @apply bg-transparent text-primary;
            }

            &:focus,
            &:focus-visible {
                @apply -outline-offset-1 bg-transparent text-primary;
            }

            svg {
                @apply size-5;
            }
        }

        .date-picker {
            @apply pt-2;
            display: none;

            .nav-btn {
                @apply px-2!;
            }

            .nav {
                @apply top-1;
            }
        }

        &.expanded {
            @apply flex-col;

            & > .btn {
                @apply mt-1 p-0 rounded-t-none;
            }

            .short-day-picker {
                display: none;
            }

            .date-picker {
                display: block;
            }
        }
    }

    .tag-tree {
        @apply hidden tablet:block sm:overflow-auto flex-1 py-2 overscroll-contain;
    }
}

.state-filter {
    @apply hidden tablet:grid;
    @apply grid-cols-2 gap-1 items-center justify-stretch w-full bg-surface-level-2 rounded-2xl mb-2;

    .state-filter-item {
        @apply flex gap-2 items-center justify-center p-1 text-sm rounded-xl border border-surface-level-2 cursor-pointer text-subtle-extra-dark;

        &:hover {
            @apply bg-surface-level-1 border-subtle-extra-dark text-text;
        }

        &[data-pressed] {
            @apply bg-surface-level-1 border-subtle-extra-dark text-text font-semibold;
        }
    }
}

.filter-offcanvas-trigger {
    --btn-border-color: var(--color-subtle-dark);
    --btn-bg: var(--color-text);
    --btn-bg-active: var(--color-subtle-light);
    @apply tablet:hidden -ms-1 size-10 ps-0! pe-0! focus:outline-0 focus-visible:outline-0;

    .icon {
        @apply border-0! bg-transparent! items-center! p-0! justify-center -ml-1;
    }

    &:hover {
        --btn-bg: var(--color-subtle-extra-light);
        --btn-border-color: var(--color-subtle-light);
    }

    &:hover .icon svg {
        animation: none !important;
        color: var(--color-text) !important;
    }
}

.filter-offcanvas {
    padding-top: max(env(safe-area-inset-top), calc(var(--spacing) * 4)) !important;
    padding-bottom: calc(env(safe-area-inset-bottom, 0) + var(--spacing) * 4) !important;

    & > nav {
        @apply w-full flex justify-center;
    }

    .offcanvas-title {
        @apply text-xl mb-2;
    }

    .state-filter {
        @apply grid-cols-1 grid-cols-1 grid!;
    }

    .tag-tree {
        @apply block;
    }
}

.tag-tree-item {
    .icon,
    & > span {
        @apply text-subtle-dark;
    }

    &[data-expanded] .tag-tree-item-expand-toggle-btn {
        @apply rotate-90 mt-1;
    }

    &[data-selected] .tag-tree-item-expand-toggle {
        @apply bg-primary-light! text-primary-contrast!;
        .icon,
        & > span {
            @apply text-primary-contrast;
        }
    }
}

.tag-tree-item-expand-toggle {
    @apply w-full flex items-center cursor-pointer rounded-sm xs:hover:bg-subtle active:bg-subtle ps-1 pe-2;
    padding-left: calc((var(--tree-item-level, 1) - 1) * var(--spacing, 0) * 8);

    & > span {
        @apply flex-1;
    }
}

.tag-tree-item-expand-toggle-btn {
    transition: rotate 0.25s;
}

.memo-list-filter-search {
    @apply flex-1;
    @media (max-width: 1024px) {
        input {
            @apply py-1.5 pe-1 ps-7;
            font-size: 1rem;
        }
    }

    &.collapsible {
        @apply tablet:hidden;

        .icon {
            @apply pointer-events-none size-10 justify-center p-0!;
        }

        .input-field {
            @apply flex justify-end flex-1;
        }

        .input-field .input {
            @apply size-10;
            padding: 0 !important;
            padding-inline: 0 !important;
            padding-block: 0 !important;
        }

        &:has(*:focus) {
            .input-field {
                & > div {
                    @apply flex-1;
                }
            }

            .input-field .input {
                @apply pl-8! py-1! px-1! text-text;
                width: 100%;
            }

            .icon {
                @apply p-0.5 pl-2;
            }
        }
    }
}

.appheader:has(.memo-list-filter-search.collapsible input:focus) {
    .memo-list-header {
        display: none;
    }
}

